@@ -1,5 +1,16 @@
 2008-03-05  Adam Roben  <aroben@apple.com>
 
+        Rename WebCoreScriptDebuggerImp.{h,mm} to WebScriptDebugger.{h,mm}
+
+        Reviewed by Kevin M.
+
+        * WebView/WebFrame.mm:
+        * WebView/WebScriptDebugDelegate.mm:
+        * WebView/WebScriptDebugger.h: Renamed from WebKit/mac/WebView/WebCoreScriptDebuggerImp.h.
+        * WebView/WebScriptDebugger.mm: Renamed from WebKit/mac/WebView/WebCoreScriptDebuggerImp.mm.
+
+2008-03-05  Adam Roben  <aroben@apple.com>
+
         Rename WebCoreScriptDebuggerImp to WebScriptDebugger
 
         Reviewed by Kevin M.
